To Do:
    - accept minor, modes for song keys in transpose list

0.
   - make the javascript in changekey look less ignorant

0.11
    - now the links are regular links, not javascript: ones, so you can
      open them up in separate tabs, etc.

0.10 
    - fixing sort order of list-of-keys dropdowns so high is up
    

0.09 2005-02-05
    - adding See&Hear target, faking key handling for minor, modes
    - make install shouldn't overrwrite beforetext, aftertext since the
      user has probably put their own stuff in there

0.08 2005-02-05
    - aha, abc2midi can use stdin instead of a temp file

0.06 
    - tweaks to aftertext

0.05 
    - handling notes (N:) in abc
    - using javascript include for signature

0.04 2004-04-22
    - closed <head> and <title> tags in jpg/dhandler (thanks to Jerome Rainey for finding it)
    - fixed MIME type for jpg to image/jpeg (thanks again, Jerome)

0.03 2004-04-22
    - getting srcdir from config in index.html
    - adding lots of text to various
    
0.02 2004-04-22
   - removing dhandler in base dir, not used
   - taking abc files out of distro
   - adding aftertext, beforetext
   - tweaking README.txt, adding License

0.01 2004-04-18
    - initial version