@@ -8,9 +8,9 @@ What are all these three-letter acronym links on this page?
 It's very handy, easy to learn and use, and is supported by a <i>ton</i> of free software
 and shareware.  If you're into music and you don't know about it, you should.</dd>
 <dt>pdf</dt>
-   <dd>Stands for "Portable Document Format", readable by the free <a "href=http://www.adobe.com/products/acrobat/readstep2.html"</a>Adobe Acrobat Reader</a>. Click on 'pdf' to get nice, printable sheet music. These PDF files were created by <a href="#abcm2ps">abcm2ps</a> and <a href="#ghostscript">Ghostscript</a></dd>
+   <dd>Stands for "Portable Document Format", readable by the free <a "href=http://www.adobe.com/products/acrobat/readstep2.html"</a>Adobe Acrobat Reader</a>. Click on 'pdf' to get nice, printable sheet music. These PDF files were created by <a href="#jcabc2ps">jcabc2ps</a> and <a href="#ghostscript">Ghostscript</a></dd>
 <dt>jpg</dt>
-   <dd>An image of the sheet music.  You can use this if for some reason PDF doesn't work for you. To zoom in and make the images larger, try clicking on them--the zoom behavior depends on your browser.  Also created by <a href="#abcm2ps">abcm2ps</a> and <a href="#ghostscript">Ghostscript</a>.</dd>
+   <dd>An image of the sheet music.  You can use this if for some reason PDF doesn't work for you. To zoom in and make the images larger, try clicking on them--the zoom behavior depends on your browser.  Also created by <a href="#jcabc2ps">jcabc2ps</a> and <a href="#ghostscript">Ghostscript</a>.</dd>
 <dt>midi</dt>
    <dd>"MIDI" stands for <a href="http://www.midi.org/about-midi/aboutmidi3.shtml">Music Instrument Digital Interface</a>. Clicking on the "midi" link in one of the tunes should make music come out of your computer.  If it doesn't then give that friend of yours who knows computers a call.<br>
 I know mediocre midi is an abomination in the eyes of God (Calliope, anyway), and hardly qualifies to be called "music", but these midis might be helpful to those who don't read sheet so good. I find them helpful when trying to find the right range to sing a tune in.
@@ -47,11 +47,11 @@ for building web sites.  Inspired by <a href="http://www.perl.com/pub/a/2004/04/
 I upload one version of each song in ABC format, and all the other formats in all the other keys are generated on-demand and cached.  The cache is keyed to the original file, so if I make changes to it, the other versions are regenerated when they're requested.
     </li>
     <li><a name="abc">ABC</a>(<a href="http://staffweb.cms.gre.ac.uk/~c.walshaw/abc/">tutorial</a> <a href="http://abc.sourceforge.net/standard/abc2midi.txt">reference</a>) is a simple, portable way to transcribe music that's been around for more than a dozen years.  Since it's simple and also open, it's inspired a whole bunch of useful free software around it, including some of the following.
-    <li><a href="http://moinejf.free.fr/">abcm2ps</a> is software that converts ABC music to PostScript, a printer format developed by Adobe. abcm2ps is released under the <a href="http://www.gnu.org/licenses/licenses.html#GPL">GNU General Public License (GPL)</a> and PostScript is an open standard, and all these free and open standards make all this work possible!
+    <li><a href="http://abc.sourceforge.net/jcabc2ps/">jcabc2ps</a> is software that converts ABC music to PostScript, a printer format developed by Adobe. jcabc2ps is released under the <a href="http://www.gnu.org/licenses/licenses.html#GPL">GNU General Public License (GPL)</a> and PostScript is an open standard, and all these free and open standards make all this work possible!
      </li>
     <li>abc2midi and abc2abc are programs from the <a href="http://abc.sourceforge.net/abcMIDI/">abcMIDI project</a>, also released under the GNU GPL.  The former creates the midi files on the site, and the latter handles transposing keys.
     </li>
-    <li><a name="ghostscript" href="http://www.cs.wisc.edu/~ghost/">Ghostscript</a> is a PostScript interpreter, which lets me change the PostScript output from abcm2ps into jpg and PDF files.  Did I mention the GPL?
+    <li><a name="ghostscript" href="http://www.cs.wisc.edu/~ghost/">Ghostscript</a> is a PostScript interpreter, which lets me change the PostScript output from jcabc2ps into jpg and PDF files.  Did I mention the GPL?
     </li>
     <li><a href="http://www.pdinfo.com/source/D230481.htm">The Stephen Foster Song Book</a>, Richard Jackson, Dover Publications, 1974.  This has been a primary reference so far.  A very nice presentation of the original sheet music, I'd highly recommend it.
     </li>
