@@ -2,6 +2,8 @@ To Do:
     - accept minor, modes for song keys in transpose list
 
 0.
+   - ***config change***: replaced abcm2ps with jcabc2ps, you'll need to update your config file
+   - other updates to make work with latest HTTP:Mason, Apache2
    - make the javascript in changekey look less ignorant
 
 0.11
